# talkcody

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  fly.toml  package.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Dockerfile  fly.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/.llm-fixtures/: MiniMax__Claude__MiniMax-M2.1__custom.json  MiniMax__Claude__MiniMax-M2.5__custom.json  aiGateway__OpenAiCompatible__xai_grok-4.1-fast-reasoning__custom.json  alibaba__OpenAiCompatible__MiniMax-M2.5__custom.json  alibaba__OpenAiCompatible__glm-5__custom.json  alibaba__OpenAiCompatible__qwen3.5-plus__custom.json  deepseek__OpenAiCompatible__deepseek-v4-flash__custom.json  deepseek__OpenAiCompatible__deepseek-v4-pro__custom.json  google__OpenAiCompatible__gemini-2.5-flash-lite__custom.json  kimi_coding__OpenAiCompatible__kimi-k2.5__custom.json  moonshot__OpenAiCompatible__kimi-k2.5__custom.json  openai-compatible-openrouter-test-510556__OpenAiCompatible__xiaomi_mimo-v2-flash__custom.json  openai__OpenAiCompatible__gpt-5.4__custom.json  openai__OpenAiCompatible__gpt-5.5__oauth.json  zenmux__OpenAiCompatible__anthropic_claude-haiku-4.5__custom.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: glob.rs  http_proxy.rs  lib.rs  lsp.rs  search.rs  shell_utils.rs  websocket.rs
src-tauri/core/src/core/: agent_loop.rs  mod.rs  runtime.rs  tool_definitions.rs  tool_dependency_analyzer.rs  tool_name_normalizer.rs  tools.rs
src-tauri/core/src/git/: repository.rs  status.rs
src-tauri/core/src/llm/: commands.rs  types.rs
src-tauri/core/src/platform/: git.rs  mod.rs  types.rs
src-tauri/core/src/storage/: attachments.rs  chat_history.rs  mod.rs
src-tauri/core/src/streaming/: buffer.rs
src-tauri/core/src/tools/: bash_tool.rs  call_agent.rs  code_search.rs  edit_file.rs  exit_plan_mode.rs  github_pr.rs  glob_tool.rs  image_generation.rs  install_skill.rs  list_files.rs  mod.rs  read_file.rs  web_fetch.rs  write_file.rs
src-tauri/core/src/types/: agent_loop.rs  mod.rs  runtime.rs  tool_definitions.rs  tool_name_normalizer.rs  tools.rs
src-tauri/desktop/src/: lib.rs
src-tauri/desktop/src/scheduled_tasks/: mod.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: lib.rs  main.rs  state.rs  streaming_bridge.rs  types.rs
src-tauri/server/src/routes/: actions.rs  chat.rs  sessions.rs  tasks.rs
src-tauri/src/: background_tasks.rs  feishu_gateway.rs  glob.rs  http_proxy.rs  lib.rs  lint.rs  list_files.rs  lsp.rs  s3.rs  s3_sync.rs  script_executor.rs  search.rs  shell_utils.rs  telegram_gateway.rs  terminal.rs
src-tauri/src/core/: agent_loop.rs  runtime.rs  tool_definitions.rs  tools.rs  types.rs
src-tauri/src/git/: diff.rs  mod.rs  repository.rs  status.rs  worktree.rs
src-tauri/src/integrations/: feishu.rs  telegram.rs
src-tauri/src/llm/: commands.rs  types.rs
src-tauri/src/llm/ai_services/: types.rs
src-tauri/src/llm/auth/: api_key_manager.rs  oauth.rs
src-tauri/src/llm/image_generation/: dashscope.rs
src-tauri/src/llm/protocols/: claude_protocol.rs  mod.rs  openai_protocol.rs  openai_responses_protocol.rs  request_builder.rs  stream_parser.rs
src-tauri/src/llm/providers/: default_provider.rs  mod.rs  moonshot_provider.rs  openai_provider.rs  provider.rs  provider_configs.rs  provider_registry.rs
src-tauri/src/llm/streaming/: stream_handler.rs
src-tauri/src/llm/testing/: tests.rs
src-tauri/src/platform/: lsp.rs  shell.rs
src-tauri/src/security/: mod.rs
src-tauri/src/server/: mod.rs  state.rs  streaming_bridge.rs  types.rs
src-tauri/src/server/routes/: chat.rs  files.rs  mod.rs  sessions.rs  tasks.rs
src-tauri/src/storage/: attachments.rs  settings.rs
src-tauri/src/storage/migrations/: mod.rs
(+496 files in other folders)
