[package]
name = "talkcody"
version = "0.1.10"
description = "AI Coding Agent"
authors = ["Kaisen Kang"]
edition = "2021"
default-run = "talkcody"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-log = "2.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grep = "0.3"
ignore = "0.4"
rayon = "1.11"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
libsql = "0.9.29"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking", "gzip", "brotli", "multipart"], default-features = false }
bytes = "1"
url = "2.5"
futures-util = "0.3"
async-stream = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
lru = "0.12"
portable-pty = "0.9"
uuid = { version = "1.20", features = ["v4"] }
tar = "0.4"
flate2 = "1.1"
# Tree-sitter for code navigation
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
sha2 = "0.10"
hex = "0.4"
regex = "1.12.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dirs = "5.0"
rand = "0.8"
which = "7.0"
zip = "2.4"
# OAuth callback server
tiny_http = "0.12"
async-trait = "0.1"
axum = "0.7"
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
env_logger = "0.11"
open-lark = { version = "0.14.0", default-features = false, features = ["im", "websocket"] }
futures = "0.3.31"

[patch.crates-io]
open-lark = { git = "https://github.com/talkcody/open-lark", branch = "fix-user-id-null" }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
notify = "6.1"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2.7"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2.10", features = ["protocol-asset", "test"] }
tiny_http = "0.12"
