[package]
name = "talkcody-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TalkCody Server State and Config (for Desktop)"
license = "MIT"

[dependencies]
# Core library
talkcody-core = { path = "../core" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
log.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true
